--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
   "homepage": "https://github.com/mikehui1124/digital_excercise_book#readme",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.20.1",
+    "cloudinary": "^1.32.0",
     "connect-session-sequelize": "^7.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "tesseract.js": "^3.0.3"
   }
 }
